# map-bot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
map_bot/: bot.py
